--- a/pages/maxmsp/allpass.html
+++ b/pages/maxmsp/allpass.html
@@ -97,7 +97,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
-                    <img src="https://www.gabrielavelitch.com/assets/images/maxmsp/allpass.gif" alt="allpass">
+                    <img src="https://www.gabrielavelitch.com/assets/images/maxmsp/allpass.gif" alt="">
 
                 </div>
             </div>
