--- a/pages/maxmsp/svf.html
+++ b/pages/maxmsp/svf.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
 
 
-  <title>gen~ svf</title>
+  <title>svf</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
