--- a/pages/maxmsp/allpass.html
+++ b/pages/maxmsp/allpass.html
@@ -67,7 +67,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">MaxMSP Tools</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>gen~ svf</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>allpass</strong></h4>
 
             </div>
         </div>
