--- a/pages/maxmsp/allpass.html
+++ b/pages/maxmsp/allpass.html
@@ -82,7 +82,8 @@
 
 
                 <p class="mbr-text mbr-fonts-style display-7">
-                  <strong>State Variable Filter</strong> - this filter implements some onepole filters correlated between them that produce lowpass, highpass, bandpass, and notch output simultaneously.</p>
+                  <strong>State Variable Filter</strong> - is a signal processing filter that passes all frequencies equally in gain, but changes the phase relationship among various frequencies.
+It is well known that the series combination of a feedforward and feedback comb filter (having equal delays) creates an allpass filter when the feedforward coefficient is the negative of the feedback coefficient.</p>
             </div>
         </div>
     </div>
