--- a/pages/maxmsp/allpass.html
+++ b/pages/maxmsp/allpass.html
@@ -82,7 +82,21 @@
 
 
                 <p class="mbr-text mbr-fonts-style display-7">
-                  <strong>allpass</strong> - is a signal processing filter that passes all frequencies equally in gain, but changes the phase relationship among various frequencies.
+                  <strong>allpass</strong> - is a signal processing filter that passes all frequencies equally in gain, but changes the phase relationship among various frequencies.</p>
+
+<section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
+                    <div class="container">
+                          <div class="row justify-content-center">
+                              <div class="col-12 col-lg-6">
+                                  <div class="image-wrapper">
+                                      <img src="https://www.gabrielavelitch.com/assets/images/diagrams/allpass.png" alt="">
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+</section>
+
+                <p class="mbr-text mbr-fonts-style display-7">
 It is well known that the series combination of a feedforward and feedback comb filter (having equal delays) creates an allpass filter when the feedforward coefficient is the negative of the feedback coefficient.</p>
             </div>
         </div>
@@ -90,11 +104,7 @@ It is well known that the series combination of a feedforward and feedback comb 
 </section>
 
 <section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
-
-
-
-
-    <div class="container">
+  <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
