--- a/pages/maxmsp/allpass.html
+++ b/pages/maxmsp/allpass.html
@@ -95,6 +95,17 @@
                           </div>
                       </div>
 </section>
+<section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
+                    <div class="container">
+                          <div class="row justify-content-center">
+                              <div class="col-12 col-lg-6">
+                                  <div class="image-wrapper">
+                                      <img src="https://www.gabrielavelitch.com/assets/images/diagrams/formula_allpass.png" alt="">
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+</section>
 
                 <p class="mbr-text mbr-fonts-style display-7">
 It is well known that the series combination of a feedforward and feedback comb filter (having equal delays) creates an allpass filter when the feedforward coefficient is the negative of the feedback coefficient.</p>
