--- a/pages/maxmsp/biquad.html
+++ b/pages/maxmsp/biquad.html
@@ -82,7 +82,7 @@
 
 
                 <p class="mbr-text mbr-fonts-style display-7">
-                  <strong>State Variable Filter</strong> - this filter implements some onepole filters correlated between them that produce lowpass, highpass, bandpass, and notch output simultaneously.</p>
+                  <strong>biquad</strong> - is a second order recursive linear filter, containing two poles and two zeros. “Biquad” is an abbreviation of “biquadratic”, which refers to the fact that in the Z domain, its transfer function is the ratio of two quadratic functions:</p>
             </div>
         </div>
     </div>
@@ -110,7 +110,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/svf.zip"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>gen~ svf.maxpat (5KB)</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/biquad.zip"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>biquad.zip (5KB)</a></div>
             </div>
         </div>
     </div>
