--- a/pages/maxmsp/biquad.html
+++ b/pages/maxmsp/biquad.html
@@ -87,12 +87,20 @@
         </div>
     </div>
 </section>
+<section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-lg-6">
+                <div class="image-wrapper">
+                    <img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/81dadce574579cea71332be128dc15811fb738a7" alt="">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
-
-
-
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-6">
