--- a/pages/maxmsp/combfilter.html
+++ b/pages/maxmsp/combfilter.html
@@ -82,23 +82,45 @@
 
 
                 <p class="mbr-text mbr-fonts-style display-7">
-                  <strong>State Variable Filter</strong> - this filter implements some onepole filters correlated between them that produce lowpass, highpass, bandpass, and notch output simultaneously.</p>
+                  <strong>combfilter</strong> - is a filter implemented by adding a delayed version of a signal to itself, causing constructive and destructive interference. The frequency response of a comb filter consists of a series of regularly spaced notches, giving the appearance of a comb. Comb filters exist in two forms, Infinite Impulse Response and Finite Impulse Response; which refer to the direction in which signals are delayed before they are added to the input.</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-lg-6">
+                <div class="image-wrapper">
+                    <img src="https://www.gabrielavelitch.com/assets/images/diagrams/comb.png" alt="">
+                </div>
             </div>
         </div>
     </div>
 </section>
 
+<p class="mbr-text mbr-fonts-style display-7">A difference equation describing the feedback comb filter can be written in “direct form 1”:</p>
+
 <section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
-
-
-
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
-                    <img src="https://www.gabrielavelitch.com/assets/images/maxmsp/combfilter.gif" alt="">
+                    <img src="https://www.gabrielavelitch.com/assets/images/diagrams/formula_comb.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
+<p class="mbr-text mbr-fonts-style display-7">The feedback comb filter is a special case of an Infinite Impulse Response (IIR) (“recursive”) digital filter, since there is feedback from the delayed output to the input.</p>
+
+<section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-lg-6">
+                <div class="image-wrapper">
+                    <img src="https://www.gabrielavelitch.com/assets/images/maxmsp/combfilter.png" alt="">
                 </div>
             </div>
         </div>
@@ -106,7 +128,6 @@
 </section>
 
 <section data-bs-version="5.1" class="content11 cid-sYxUmQ9Po6" id="content11-1e">
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
