--- a/pages/maxmsp/comb_iir.html
+++ b/pages/maxmsp/comb_iir.html
@@ -82,23 +82,44 @@
 
 
                 <p class="mbr-text mbr-fonts-style display-7">
-                  <strong>State Variable Filter</strong> - this filter implements some onepole filters correlated between them that produce lowpass, highpass, bandpass, and notch output simultaneously.</p>
+                  <strong>Infinite Impulse Responser</strong> - The direct signal “feeds back” around the delay line. The feedback comb filter is a special case of an Infinite Impulse Response (IIR), since there is feedback from the delayed output to the input.</p>
+
+                  <section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
+                      <div class="container">
+                          <div class="row justify-content-center">
+                              <div class="col-12 col-lg-6">
+                                  <div class="image-wrapper">
+                                      <img src="https://www.gabrielavelitch.com/assets/images/diagrams/iir.png" alt="">
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
+
+                  <p class="mbr-text mbr-fonts-style display-7">General structure of a feedback comb filter is described by the difference equation:</p>
+
+                  <section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
+                      <div class="container">
+                          <div class="row justify-content-center">
+                              <div class="col-12 col-lg-6">
+                                  <div class="image-wrapper">
+                                      <img src="https://www.gabrielavelitch.com/assets/images/diagrams/formula_iir.png" alt="">
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
             </div>
         </div>
     </div>
 </section>
 
 <section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
-
-
-
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
                     <img src="https://www.gabrielavelitch.com/assets/images/maxmsp/comb_iir.gif" alt="">
-
                 </div>
             </div>
         </div>
@@ -110,7 +131,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/svf.zip"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>gen~ svf.maxpat (5KB)</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/svf.zip"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>comb IIR (7KB)</a></div>
             </div>
         </div>
     </div>
