--- a/pages/maxmsp/comb_iir_vs_fir.html
+++ b/pages/maxmsp/comb_iir_vs_fir.html
@@ -81,8 +81,7 @@
             <div class="col-md-12 col-lg-8">
 
 
-                <p class="mbr-text mbr-fonts-style display-7">
-                  <strong>State Variable Filter</strong> - this filter implements some onepole filters correlated between them that produce lowpass, highpass, bandpass, and notch output simultaneously.</p>
+                <p class="mbr-text mbr-fonts-style display-7">This patch shows the comparison between Infinite Impulse Response and Finite Impulse Response filters.</p>
             </div>
         </div>
     </div>
