--- a/pages/maxmsp/comb_iir.html
+++ b/pages/maxmsp/comb_iir.html
@@ -82,7 +82,7 @@
 
 
                 <p class="mbr-text mbr-fonts-style display-7">
-                  <strong>Infinite Impulse Responser</strong> - The direct signal “feeds back” around the delay line. The feedback comb filter is a special case of an Infinite Impulse Response (IIR), since there is feedback from the delayed output to the input.</p>
+                  <strong>Infinite Impulse Responser</strong> - the direct signal “feeds back” around the delay line. The feedback comb filter is a special case of an Infinite Impulse Response (IIR), since there is feedback from the delayed output to the input.</p>
 
                   <section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
                       <div class="container">
