--- a/pages/maxmsp/freeverb.html
+++ b/pages/maxmsp/freeverb.html
@@ -82,23 +82,33 @@
 
 
                 <p class="mbr-text mbr-fonts-style display-7">
-                  <strong>State Variable Filter</strong> - this filter implements some onepole filters correlated between them that produce lowpass, highpass, bandpass, and notch output simultaneously.</p>
+                  <strong>freeverb</strong> - a more recently developed Schroeder reverberator is “Freeverb” – a public domain C++ program by “Jezar at Dreampoint” used extensively in the free-software world. It uses four Schroeder allpasses in series and eight parallel Schroeder-Moorer filtered-feedback comb filters for each audio channel, and is said to be especially well tuned.</p>
+
+                  <section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
+                      <div class="container">
+                          <div class="row justify-content-center">
+                              <div class="col-12 col-lg-6">
+                                  <div class="image-wrapper">
+                                      <img src="https://www.dsprelated.com/josimages_new/pasp/img724.png" alt="">
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
+
+<p class="mbr-text mbr-fonts-style display-7">The figure shows the default signal-processing settings for the Freeverb left stereo channel. Processing for the right channel is obtained by adding an integer to each of the twelve delay-line lengths. This integer is called stereospread, and its default value is 23.</p>
+
             </div>
         </div>
     </div>
 </section>
 
 <section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
-
-
-
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
                     <img src="https://www.gabrielavelitch.com/assets/images/maxmsp/freeverb.gif" alt="">
-
                 </div>
             </div>
         </div>
@@ -110,7 +120,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/svf.zip"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>gen~ svf.maxpat (5KB)</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/freeverb.zip"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>freeverb.zip (6KB)</a></div>
             </div>
         </div>
     </div>
