--- a/pages/maxmsp/onepole.html
+++ b/pages/maxmsp/onepole.html
@@ -82,7 +82,7 @@
 
 
                 <p class="mbr-text mbr-fonts-style display-7">
-                  <strong>Onepole</strong> - the filter has a pole at Z = -a1 , in the Z plane (and a zero at Z = 0). Notice that the one-pole exhibits either a lowpass or a highpass frequency response, like the one-zero. The lowpass character occurs when the pole is near the point Z = 1, which happens when a_1 approaches -1. Conversely, the highpass nature occurs when a_1 is positive.</p>
+                  <strong>onepole</strong> - the filter has a pole at Z = -a1 , in the Z plane (and a zero at Z = 0). Notice that the one-pole exhibits either a lowpass or a highpass frequency response, like the one-zero. The lowpass character occurs when the pole is near the point Z = 1, which happens when a_1 approaches -1. Conversely, the highpass nature occurs when a_1 is positive.</p>
             </div>
         </div>
     </div>
