--- a/pages/maxmsp/schroeder_JCRev.html
+++ b/pages/maxmsp/schroeder_JCRev.html
@@ -82,7 +82,13 @@
 
 
                 <p class="mbr-text mbr-fonts-style display-7">
-                  <strong>State Variable Filter</strong> - this filter implements some onepole filters correlated between them that produce lowpass, highpass, bandpass, and notch output simultaneously.</p>
+                  <strong>Schroeder JCRev</strong> - developed by Prof. John Chowning, consists of the following elements:
+<ul>
+<li>A series connection of several allpass filters</li>
+<li>A parallel bank of feedback comb filters</li>
+<li>A mixing matrix</li>
+</ul>
+</p>
             </div>
         </div>
     </div>
