--- a/pages/maxmsp/schroeder_JCRev.html
+++ b/pages/maxmsp/schroeder_JCRev.html
@@ -89,22 +89,57 @@
 <li>A mixing matrix</li>
 </ul>
 </p>
+
+<section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-lg-6">
+                <div class="image-wrapper">
+                    <img src="https://www.dsprelated.com/josimages_new/pasp/img706.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<p class="mbr-text mbr-fonts-style display-7">MM denotes the mixing matrix</p>
+
+<section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-lg-6">
+                <div class="image-wrapper">
+                    <img src="https://www.dsprelated.com/josimages_new/pasp/img709.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<p class="mbr-text mbr-fonts-style display-7">which can be efficiently implemented using four adders and two negations:</p>
+
+<section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-lg-6">
+                <div class="image-wrapper">
+                    <img src="https://www.dsprelated.com/josimages_new/pasp/img710.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
             </div>
         </div>
     </div>
 </section>
 
 <section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
-
-
-
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
                     <img src="https://www.gabrielavelitch.com/assets/images/maxmsp/schroeder_JCRev.gif" alt="">
-
                 </div>
             </div>
         </div>
@@ -116,7 +151,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/svf.zip"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>gen~ svf.maxpat (5KB)</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/schroeder_JCRev.zip"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>schroeder JCRev (7KB)</a></div>
             </div>
         </div>
     </div>
