--- a/pages/maxmsp/schroeder_JCRev.html
+++ b/pages/maxmsp/schroeder_JCRev.html
@@ -116,19 +116,19 @@
     </div>
 </section>
 
-<p class="mbr-text mbr-fonts-style display-7">which can be efficiently implemented using four adders and two negations:</p>
+<p class="mbr-text mbr-fonts-style display-7">which can be efficiently implemented using four adders and two negations:
+<br>
+OutA = s1 + s2
+<br>
+OutB = -OutA
+<br>
+OutC = -OutD
+<br>
+OutD = s1 / s2
+</p>
 
-<section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-12 col-lg-6">
-                <div class="image-wrapper">
-                    <img src="https://www.dsprelated.com/josimages_new/pasp/img710.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+
+
             </div>
         </div>
     </div>
