--- a/pages/maxmsp/schroeder_JCRev.html
+++ b/pages/maxmsp/schroeder_JCRev.html
@@ -118,16 +118,17 @@
 
 <p class="mbr-text mbr-fonts-style display-7">which can be efficiently implemented using four adders and two negations:
 <br>
+<br>
+<strong>
 OutA = s1 + s2
 <br>
 OutB = -OutA
 <br>
 OutC = -OutD
 <br>
-OutD = s1 / s2
+OutD = s1 - s2
+</strong>
 </p>
-
-
 
             </div>
         </div>
