--- a/pages/maxmsp/schroeder_JCRev.html
+++ b/pages/maxmsp/schroeder_JCRev.html
@@ -119,6 +119,7 @@
 <p class="mbr-text mbr-fonts-style display-7">which can be efficiently implemented using four adders and two negations:
 <br>
 <br>
+<code>
 <strong>
 OutA = s1 + s2
 <br>
@@ -128,6 +129,7 @@ OutC = -OutD
 <br>
 OutD = s1 - s2
 </strong>
+</code>
 </p>
 
             </div>
