--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">The Isabella Scelsi Foundation is a cultural institution based in Rome, Italy, devoted to the study and dissemination of Italian composer Giacinto Scelsi's (1905-1988) oeuvre and the promotion of new music all throughout the world. The Foundation – approved by the Minister of Cultural Heritage by decree of the President of the Republic in 1990 – was established on the 21st of January 1987 by Giacinto Scelsi, who named it after his sister Isabella.</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="http://www.scelsi.it/it/evento/omaggio-a-mario-bertoncini/" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="http://www.scelsi.it/it/home/" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
