--- a/pages/maxmsp/filter_library.html
+++ b/pages/maxmsp/filter_library.html
@@ -53,92 +53,37 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/projects.html">PROJECTS</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a></li></ul>
-
-
             </div>
         </div>
     </nav>
 </section>
 
 <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
-
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">MaxMSP Tools</h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>filter library</strong></h4>
-
-            </div>
-        </div>
-    </div>
-</section>
-
-<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-12 col-lg-8">
-
-
-                <p class="mbr-text mbr-fonts-style display-7">
-                  <strong>Schroeder JCRev</strong> - developed by Prof. John Chowning, consists of the following elements:
-<ul>
-<li>A series connection of several allpass filters</li>
-<li>A parallel bank of feedback comb filters</li>
-<li>A mixing matrix</li>
-</ul>
-</p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
-
-
-
-
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-12 col-lg-6">
-                <div class="image-wrapper">
-                    <img src="https://www.gabrielavelitch.com/assets/images/gen-svf.gif" alt="svf">
-
-                </div>
             </div>
         </div>
     </div>
 </section>
 
 <section data-bs-version="5.1" class="content11 cid-sYxUmQ9Po6" id="content11-1e">
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/svf.zip"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>gen~ svf.maxpat (5KB)</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/filter_library.zip"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>filter library.genexpr (6KB)</a></div>
             </div>
         </div>
     </div>
 </section>
 
 <section data-bs-version="5.1" class="footer3 cid-sYsmn2ZqhN mbr-reveal" once="footers" id="footer3-1a">
-
-
-
-
-
     <div class="container">
         <div class="media-container-row align-center mbr-white">
-
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
-
-
-
-
-
-
                 <div class="soc-item">
                         <a href="https://github.com/Velitch" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
