--- a/pages/projects/corkino.html
+++ b/pages/projects/corkino.html
@@ -139,7 +139,9 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">user manual (EN)
-<br>manuale d’uso (IT) (9.58 MB)</p>
+<br>
+                <a href="https://www.gabrielavelitch.com/downloads/corkino/corkino_user_manual.pdf">manuale d’uso (IT) (9.58 MB)</a>
+              </p>
                             </div>
                         </div>
                     </div>
