--- a/pages/projects/corkino.html
+++ b/pages/projects/corkino.html
@@ -138,9 +138,9 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text mbr-fonts-style display-7">user manual (EN)
+                                <p class="mbr-text mbr-fonts-style display-7">- user manual (EN)
                                   <br>
-                                  <a href="https://www.gabrielavelitch.com/downloads/corkino/corkino_user_manual.pdf">manuale d’uso (IT) (9.58 MB)</a>
+                                  - <a href="https://www.gabrielavelitch.com/downloads/corkino/corkino_user_manual.pdf">manuale d’uso (IT) (9.58 MB)</a>
                                 </p>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
-                                  <a href="https://www.gabrielavelitch.com/downloads/corkino/corkino_ui.zip">corkino UI for MaxMSP (8.08 MB)</a>
+                                - <a href="https://www.gabrielavelitch.com/downloads/corkino/corkino_ui.zip">corkino UI for MaxMSP (8.08 MB)</a>
                                 </p>
                             </div>
                         </div>
