--- a/pages/projects/corkino.html
+++ b/pages/projects/corkino.html
@@ -155,8 +155,17 @@
                         </div>
                     </div>
 
-
-
+<section data-bs-version="5.1" class="image3 cid-sYQONaZvSe" id="image3-1r">
+                        <div class="container-fluid">
+                            <div class="row justify-content-center">
+                                <div class="col-12 col-lg-12">
+                                    <div class="image-wrapper">
+                                        <img src="https://www.gabrielavelitch.com/assets/images/post-corkino-1201x401.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
                 </div>
             </div>
