--- a/pages/projects/corkino.html
+++ b/pages/projects/corkino.html
@@ -31,7 +31,6 @@
 <body>
 
   <section data-bs-version="5.1" class="menu menu2 cid-sYseAX4x5N" once="menu" id="menu2-s">
-
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container">
             <div class="navbar-brand">
@@ -52,8 +51,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/projects.html">PROJECTS</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a></li></ul>
-
-
             </div>
         </div>
     </nav>
@@ -97,7 +94,6 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="counter-container col-md-12 col-lg-8">
-
                 <div class="mbr-text mbr-fonts-style display-7">
                     <ul>
                         <li><strong>Hexagonal design&nbsp;</strong>Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.<strong>&nbsp;</strong></li>
@@ -112,16 +108,23 @@
     </div>
 </section>
 
+<section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
+  <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-lg-6">
+                <div class="image-wrapper">
+                    <img src="https://www.gabrielavelitch.com/assets/images/projects/ui_corkino.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section data-bs-version="5.1" class="tabs content18 cid-sYxOhZdd7S" id="tabs1-14">
-
-
-
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
                 <h3 class="mbr-section-title mb-0 mbr-fonts-style display-5"><strong>DOWNLOADS</strong></h3>
-
             </div>
         </div>
         <div class="row justify-content-center mt-4">
@@ -129,10 +132,6 @@
                 <ul class="nav nav-tabs mb-4" role="tablist">
                     <li class="nav-item first mbr-fonts-style"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="https://www.gabrielavelitch.com/pages/projects/#tabs1-14_tab0" aria-selected="true"><strong>Manual</strong></a></li>
                     <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="https://www.gabrielavelitch.com/pages/projects/#tabs1-14_tab1" aria-selected="true"><strong>Software</strong></a></li>
-
-
-
-
                 </ul>
                 <div class="tab-content">
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
@@ -174,22 +173,10 @@
 </section>
 
 <section data-bs-version="5.1" class="footer3 cid-sYsmn2ZqhN mbr-reveal" once="footers" id="footer3-t">
-
-
-
-
-
     <div class="container">
         <div class="media-container-row align-center mbr-white">
-
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
-
-
-
-
-
-
                 <div class="soc-item">
                         <a href="https://github.com/Velitch" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
