--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -106,9 +106,9 @@
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
                                       <strong>
-                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/allpass.html" class="text-primary"><b>Maths</b></a>
-                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/biquad.html" class="text-primary"><b>Filters</b></a>
-                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/combfilter.html" class="text-primary"><b>Effects</b></a>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_maths_library.html" class="text-primary"><b>Maths</b></a>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_filters_library.html" class="text-primary"><b>Filters</b></a>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_effects_library.html" class="text-primary"><b>Effects</b></a>
                                       </strong>
                                 </div>
                             </div>
