--- a/pages/maxmsp/GKV_effects_library.html
+++ b/pages/maxmsp/GKV_effects_library.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
 
 
-  <title>filter library</title>
+  <title>Effects Library</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -53,37 +53,76 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/projects.html">PROJECTS</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a></li></ul>
+
+
             </div>
         </div>
     </nav>
 </section>
 
 <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">MaxMSP Tools</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>filter library</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Effects Library</strong></h4>
+
             </div>
         </div>
     </div>
 </section>
 
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+
+
+                <p class="mbr-text mbr-fonts-style display-7">
+                  <strong>freeverb</strong> - a more recently developed Schroeder reverberator is “Freeverb” – a public domain C++ program by “Jezar at Dreampoint” used extensively in the free-software world. It uses four Schroeder allpasses in series and eight parallel Schroeder-Moorer filtered-feedback comb filters for each audio channel, and is said to be especially well tuned.</p>
+
+
+
+<p class="mbr-text mbr-fonts-style display-7">The figure shows the default signal-processing settings for the Freeverb left stereo channel. Processing for the right channel is obtained by adding an integer to each of the twelve delay-line lengths. This integer is called stereospread, and its default value is 23.</p>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
 <section data-bs-version="5.1" class="content11 cid-sYxUmQ9Po6" id="content11-1e">
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/filter_library.zip"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>filter library.genexpr (6KB)</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/GKV_effects_library.genexpr"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>freeverb.zip (6KB)</a></div>
             </div>
         </div>
     </div>
 </section>
 
 <section data-bs-version="5.1" class="footer3 cid-sYsmn2ZqhN mbr-reveal" once="footers" id="footer3-1a">
+
+
+
+
+
     <div class="container">
         <div class="media-container-row align-center mbr-white">
+
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
+
+
+
+
+
+
                 <div class="soc-item">
                         <a href="https://github.com/Velitch" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
