--- a/pages/maxmsp/GKV_effects_library.html
+++ b/pages/maxmsp/GKV_effects_library.html
@@ -82,11 +82,12 @@
 
 
                 <p class="mbr-text mbr-fonts-style display-7">
-                  <strong>freeverb</strong> - a more recently developed Schroeder reverberator is “Freeverb” – a public domain C++ program by “Jezar at Dreampoint” used extensively in the free-software world. It uses four Schroeder allpasses in series and eight parallel Schroeder-Moorer filtered-feedback comb filters for each audio channel, and is said to be especially well tuned.</p>
+                  CONTENT
+                  
+                  1.
 
+                  </p>
 
-
-<p class="mbr-text mbr-fonts-style display-7">The figure shows the default signal-processing settings for the Freeverb left stereo channel. Processing for the right channel is obtained by adding an integer to each of the twelve delay-line lengths. This integer is called stereospread, and its default value is 23.</p>
 
             </div>
         </div>
