--- a/pages/maxmsp/GKV_effects_library.html
+++ b/pages/maxmsp/GKV_effects_library.html
@@ -83,7 +83,7 @@
 
                 <p class="mbr-text mbr-fonts-style display-7">
                   CONTENT
-                  
+
                   1.
 
                   </p>
@@ -101,7 +101,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/GKV_effects_library.genexpr"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>freeverb.zip (6KB)</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/GKV_effects_library.genexpr"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>GKV_effects_library.genexpr (7KB)</a></div>
             </div>
         </div>
     </div>
