--- a/pages/maxmsp/GKV_effects_library.html
+++ b/pages/maxmsp/GKV_effects_library.html
@@ -82,9 +82,9 @@
 
 
                 <p class="mbr-text mbr-fonts-style display-7">
-                  CONTENT
-
-                  1.
+                  <strong>CONTENT</strong>
+                  <br>
+                  1. FLANGER
 
                   </p>
 
