--- a/pages/maxmsp/GKV_effects_library.html
+++ b/pages/maxmsp/GKV_effects_library.html
@@ -84,7 +84,7 @@
                 <p class="mbr-text mbr-fonts-style display-7">
                   <strong>CONTENT</strong>
                   <br>
-                  1. FLANGER
+                  1. Flanger
 
                   </p>
 
