--- a/pages/maxmsp/GKV_filters_library.html
+++ b/pages/maxmsp/GKV_filters_library.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
 
 
-  <title>Effects Library</title>
+  <title>Filters Library</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -67,7 +67,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">MaxMSP Tools</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Effects Library</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Filters Library</strong></h4>
 
             </div>
         </div>
@@ -84,7 +84,32 @@
                 <p class="mbr-text mbr-fonts-style display-7">
                   <strong>CONTENT</strong>
                   <br>
-                  1. Flanger
+                  1. ONEPOLE
+                  <br>
+                  1.1 onepole (Xn, freqcut)
+                  <br>
+                  <br>
+                  2. BIQUAD
+                  <br>
+                  2.1  biquad (Xn, a0, a1, a2, b1, b2)
+                  <br>
+                  <br>
+                  3. ALLPASS
+                  <br>
+                  3.1 - allpass_T60 (Xn, ms, T60)
+                  <br>
+                  3.2 - allpass_gain (Xn, ms, gain)
+                  <br>
+                  <br>
+                  4. COMB FILTER
+                  <br>
+                  4.1 - comb_iir (Xn, ms, gain)
+                  <br>
+                  4.2 - comb_fir (Xn, ms, gain)
+                  <br>
+                  4.3 - fbcomb_lp_g (Xn, ms, gain, freqcut)
+                  <br>
+                  4.4 - fbcomb_lp_T60 (Xn, ms, T60, freqcut)
 
                   </p>
 
