--- a/pages/maxmsp/GKV_maths_library.html
+++ b/pages/maxmsp/GKV_maths_library.html
@@ -86,19 +86,18 @@
                   <br>
                   1. OSCILLATORS
                   <br>
-                  1.1. PHASOR
+                  1.1. Phasor
                   <br>
-                  1.2. CYCLE
+                  1.2. Cycle
                   <br>
                   <br>
                   2. CONVERTORS
                   <br>
-                  2.1. FREQUENCY TO MILLISECOND (fq2ms)
+                  2.1. Frequency to Millisecond
                   <br>
-                  2.2. MILLISECOND TO FREQUENCY (ms2fq)
+                  2.2. Mmillisecond to frequency
                   <br>
-                  2.3. FREQUENCY TO SAMPLE (fq2samp)
-
+                  2.3. Frequency to sample
                   </p>
 
 
