--- a/pages/maxmsp/GKV_filters_library.html
+++ b/pages/maxmsp/GKV_filters_library.html
@@ -86,30 +86,26 @@
                   <br>
                   1. ONEPOLE
                   <br>
-                  1.1 onepole (Xn, freqcut)
-                  <br>
                   <br>
                   2. BIQUAD
-                  <br>
-                  2.1  biquad (Xn, a0, a1, a2, b1, b2)
                   <br>
                   <br>
                   3. ALLPASS
                   <br>
-                  3.1 - allpass_T60 (Xn, ms, T60)
+                  3.1 - allpass_T60
                   <br>
-                  3.2 - allpass_gain (Xn, ms, gain)
+                  3.2 - allpass_gain
                   <br>
                   <br>
                   4. COMB FILTER
                   <br>
-                  4.1 - comb_iir (Xn, ms, gain)
+                  4.1 - comb_iir
                   <br>
-                  4.2 - comb_fir (Xn, ms, gain)
+                  4.2 - comb_fir
                   <br>
-                  4.3 - fbcomb_lp_g (Xn, ms, gain, freqcut)
+                  4.3 - fbcomb_lp_g
                   <br>
-                  4.4 - fbcomb_lp_T60 (Xn, ms, T60, freqcut)
+                  4.4 - fbcomb_lp_T60
 
                   </p>
 
@@ -126,7 +122,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/GKV_effects_library.genexpr"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>Effects Library.genexpr (7KB)</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/GKV_filters_library.genexpr"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>Filters Library.genexpr (7KB)</a></div>
             </div>
         </div>
     </div>
