--- a/pages/maxmsp/GKV_maths_library.html
+++ b/pages/maxmsp/GKV_maths_library.html
@@ -96,7 +96,7 @@
                   <br>
                   2.1. Frequency to Millisecond
                   <br>
-                  2.2. Mmillisecond to frequency
+                  2.2. Millisecond to frequency
                   <br>
                   2.3. Frequency to sample
                   </p>
