--- a/pages/maxmsp/GKV_effects_library.html
+++ b/pages/maxmsp/GKV_effects_library.html
@@ -85,7 +85,11 @@
                   <strong>CONTENT</strong>
                   <br>
                   <br>
-                  1. Flanger
+                  1. FLANGER
+                  <br>
+                  1.1. iirflanger
+                  <br>
+                  1.2. firflanger
 
                   </p>
 
