--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -157,6 +157,7 @@
                                       <strong>
                                         <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/freeverb.html" class="text-primary"><b>freeverb</b></a>
                                         <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/schroeder_JCRev.html" class="text-primary"><b>schroeder JCRev</b></a>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/flanger.html" class="text-primary"><b>flanger</b></a>
                                       </strong>
                                       </p>
                                 </div>
