--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <br>
 <br>These were my ambitions before starting my studies at the Santa Cecilia Conservatory in Rome. Under the guidance of the best Italian teachers, I can say that after 5 years of in-depth study of all related subjects, I managed to achieve this goal!.</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/maxmsptools.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
                 </div>
             </div>
             <div class="item features-image сol-12 col-md-6 col-lg-4">
@@ -141,7 +141,7 @@
 
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/projects/corkino.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
                 </div>
             </div>
             <div class="item features-image сol-12 col-md-6 col-lg-4">
