--- a/pages/tools.html
+++ b/pages/tools.html
@@ -128,7 +128,7 @@
                                 <h5 class="card-title mbr-fonts-style display-5">
                                     <strong>Faust</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">Faust (Functional Audio Stream) is a functional programming language for sound synthesis and audio processing</p>
-                                <div class="mbr-section-btn"><a href="https://faust.grame.fr" class="btn btn-primary display-4">Learn more</a></div>
+                                <div class="mbr-section-btn"><a href="" class="btn btn-primary display-4">Coming soon!</a></div>
                             </div>
                         </div>
                         <div class="col-12 col-md-5">
