--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">The DI Box is a indispensable tool in any concert or studio context. The Dual Channel DI Box was made on commission: the customer needed a compact, versatile device intended for the most varied uses. The tool makes use of the best components available on the market. The Monacor 10:1 (DIB-110) transformer is the star of the system! Its performances are currently the best in its category and make this product satisfactory in use. The tailor-made design of the product is what makes the difference, it's your idea that becomes reality!<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Coming soon!</a></div>
                 </div>
             </div>
         </div>
