--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <br>
 <br>These were my ambitions before starting my studies at the Santa Cecilia Conservatory in Rome. Under the guidance of the best Italian teachers, I can say that after 5 years of in-depth study of all related subjects, I managed to achieve this goal!.</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/maxmsptools.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/tools.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
                 </div>
             </div>
             <div class="item features-image сol-12 col-md-6 col-lg-4">
