--- a/pages/learn.html
+++ b/pages/learn.html
@@ -159,7 +159,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">
-                    <a href="index.html#header13-1" class="text-primary">© Gabriela Velitch 2022.</a></p>
+                    <a href="https://www.gabrielavelitch.com/index.html#header13-1" class="text-primary">© Gabriela Velitch 2022.</a></p>
             </div>
         </div>
     </div>
