--- a/pages/tools.html
+++ b/pages/tools.html
@@ -40,7 +40,7 @@
 </head>
 <body>
 
-<div data-include="gkv_navbsr"></div>
+<div data-include="gkv_nav"></div>
 
 <section data-bs-version="5.1" class="info3 cid-sYzbPCvQ7r mbr-parallax-background" id="info3-1g">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
