--- a/pages/tools.html
+++ b/pages/tools.html
@@ -40,14 +40,14 @@
 </head>
 <body>
 
-      <div id="include"></div>
-      <script>
-          window.onload = function(){
-              $.get("https://www.gabrielavelitch.com/assets/internals/gkv_nav.html", function(data){
-                  $("#include").html(data);
-              })
-          }
-      </script>
+
+  <!-- Navbar-->
+    <div id="include"></div>
+    <script>
+        window.onload = function(){
+            $.get("https://www.gabrielavelitch.com/assets/internals/gkv_nav.html", function(data){
+                $("#include").html(data);})}
+    </script>
 
 <section data-bs-version="5.1" class="info3 cid-sYzbPCvQ7r mbr-parallax-background" id="info3-1g">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
