--- a/pages/learn/storia_della_musica_elettroacustica/introduzione.html
+++ b/pages/learn/storia_della_musica_elettroacustica/introduzione.html
@@ -41,34 +41,13 @@
 <body>
 
 
-  <section data-bs-version="5.1" class="menu menu2 cid-sYseAX4x5N" once="menu" id="menu2-0">
-    <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
-        <div class="container">
-            <div class="navbar-brand">
-                <span class="navbar-logo">
-                    <a href="index.html">
-                        <img src="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" alt="" style="height: 3rem;">
-                    </a>
-                </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="index.html">Gabriela Velitch</a></span>
-            </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <div class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
-                  <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/projects.html">PROJECTS</a></li>
-                  <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a></li>
-                  <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/learn.html">LEARN</a></li></ul>
-            </div>
-        </div>
-    </nav>
-</section>
+  <!-- Navbar-->
+    <div id="include"></div>
+    <script>
+        window.onload = function(){
+            $.get("https://www.gabrielavelitch.com/assets/internals/gkv_nav.html", function(data){
+                $("#include").html(data);})}
+    </script>
 
 
 <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
@@ -77,7 +56,7 @@
         </div>
         <div class="row align-items-center">
             <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/HujDEPAWboE?rel=0&amp;amp;mute=1&amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>                
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/HujDEPAWboE?rel=0&amp;amp;mute=1&amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
@@ -93,32 +72,16 @@
 </section>
 
 
-  <section data-bs-version="5.1" class="footer3 cid-sYsmn2ZqhN mbr-reveal" once="footers" id="footer3-g">
-      <div class="container">
-          <div class="media-container-row align-center mbr-white">
-              <div class="row social-row">
-                  <div class="social-list align-right pb-2">
-                  <div class="soc-item">
-                          <a href="https://github.com/Velitch" target="_blank">
-                              <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
-                          </a>
-                      </div><div class="soc-item">
-                          <a href="https://instagram.com/velitch?utm_medium=copy_link" target="_blank">
-                              <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
-                          </a>
-                      </div><div class="soc-item">
-                          <a href="https://www.linkedin.com/in/gabriela-velitch-5766991b2/" target="_blank">
-                              <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
-                          </a>
-                      </div></div>
-              </div>
-              <div class="row row-copirayt">
-                  <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">
-                      <a href="https://www.gabrielavelitch.com/index.html#header13-1" class="text-primary">© Gabriela Velitch 2022.</a></p>
-              </div>
-          </div>
-      </div>
-  </section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
+<!-- Footer-->
+  <div id="include"></div>
+  <script>
+      window.onload = function(){
+          $.get("https://www.gabrielavelitch.com/assets/internals/gkv_footer.html", function(data){
+              $("#include").html(data);})}
+  </script>
+
+
+  <section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
 
 
    <script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
