--- a/assets/internals/gkv_header.html
+++ b/assets/internals/gkv_header.html
@@ -1,29 +1,15 @@
-<section data-bs-version="5.1" class="menu menu2 cid-sYseAX4x5N" once="menu" id="menu2-0">
-  <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
-      <div class="container">
-          <div class="navbar-brand">
-              <span class="navbar-logo">
-                  <a href="https://www.gabrielavelitch.com/index.html">
-                      <img src="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" alt="" style="height: 3rem;">
-                  </a>
-              </span>
-              <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="https://www.gabrielavelitch.com/index.html">Gabriela Velitch</a></span>
-          </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <div class="hamburger">
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                  <span></span>
-              </div>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
-                <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/projects.html">PROJECTS</a></li>
-                <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a></li>
-                <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/learn.html">LEARN</a></li>
-              </ul>
-          </div>
-      </div>
-  </nav>
-</section>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0MB26WWVES"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'G-0MB26WWVES');
+</script>
+
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+<link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" type="image/x-icon">
+<meta name="description" content="">
